# ml-qol

./: .gitignore  README.md  pyproject.toml
examples/: ensemble.ipynb  handle_data_feature_engineer.ipynb  model.ipynb
ml_qol/: ensemble.py  feature_engineer.py  handle_data.py  model.py  modelling.py
ml_qol/notebooks/: data_handle_test.ipynb  modelling_test.ipynb
src/ml_qol/: .gitignore  ensemble.py  feature_engineer.py  model.py
src/ml_qol.egg-info/: PKG-INFO  SOURCES.txt
src/mlqol/: .gitignore  feature_engineer.py
