[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_qol"
version = "0.1.0"
description = "An ML toolkit library providing quality of life features"
authors = [
    { name = 'Mashrur Sakif Souherdo', email = 'mashrursakifsouehrdo@gmail.com' }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "catboost",
    "lightgbm",
    "xgboost",
    "matplotlib",
    "seaborn",
]

[tool.setuptools.packages.find]
where = ["src"]